--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
   },
   "resolutions": {
     "@graphql-codegen/visitor-plugin-common": "file:./packages/graphql-codegen-visitor-plugin-common-v5.7.1-patched.tgz"
+  },
+  "dependencies": {
+    "@optimizely/react-sdk": "^3.3.0"
   }
 }
